fixed detail page image too big issue

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -300,7 +300,13 @@ footer {
   display: flex;
   padding: 50px 100px;
   gap: 50px;
+  height: 70vh;
+  border: solid red 2px;
 
+}
+
+#detail-page-img {
+  max-width: 700px;
 }
 
 #detail-page-img img {
